--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "expo-media-library": "~16.0.4",
     "expo-sharing": "~12.0.1",
     "react": "18.2.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.3",
